packages/parser/test/tokenizer/E0010-point-invalid.txt
0.ABC
===== err =====
/test/tokenizer/E0010-point-invalid.txt:1:1: SyntaxError: E0010 - Invalid float literal
1 | 0.ABC
  | ~~~~
